<resources>
    <string name="app_name">FIND3 Scanner</string>
    <string name="no_family">family name cannot be empty</string>
    <string name="no_server">server address cannot be empty</string>
    <string name="no_valid_server">must include http or https in server name</string>
    <string name="no_device">device name cannot be empty</string>
    <string name="no_location">location name cannot be empty when learning</string>
    <string name="running">running</string>
    <string name="not_running">not running</string>
    <string name="web_socket_error">cannot connect to server, fingerprints will not be uploaded</string>
    <string name="image">image</string>
    <string name="instructions">Instructions: Enter your family name, device and then press \'Scan\' and wait.</string>
    <string name="family">Family:</string>
    <string name="device">Device:</string>
    <string name="server">Server:</string>
    <string name="default_server">https://cloud.internalpositioning.com</string>
    <string name="location">Location (optional):</string>
    <string name="gps">Submit GPS (may consume battery)</string>
    <string name="learning">Learning</string>
    <string name="tracking">Tracking</string>
    <string name="toggle_button">ToggleButton</string>
    <string name="stop_scan">Stop scan</string>
    <string name="start_scan">Start scan</string>
</resources>
