<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.internalpositioning.find3.find3app.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="113dp"
                android:layout_height="105dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_find3_01" />

            <LinearLayout
                android:id="@+id/relLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/familyName"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@+id/familyLabel"
                    android:inputType="textPersonName"
                    android:paddingTop="-10dp" />

                <TextView
                    android:id="@+id/familyLabel"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/family" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/relLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/deviceName"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@+id/deviceLabel"
                    android:inputType="textUri|textPersonName" />

                <TextView
                android:id="@+id/deviceLabel"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/device" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/relLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/serverAddress"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@+id/serverLabel"
                    android:inputType="textUri|textPersonName"
                    android:text="@string/default_server"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/serverLabel"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/server" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/relLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/locationName"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@+id/locationLabel"
                    android:inputType="textUri|textPersonName" />

                <TextView
                    android:id="@+id/locationLabel"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/location" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/relLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <CheckBox
                    android:id="@+id/allowGPS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/gps" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/relLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <ToggleButton
                    android:id="@+id/toggleScanType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/toggle_button"
                    android:textOff="@string/tracking"
                    android:textOn="@string/learning" />

                <ToggleButton
                    android:id="@+id/toggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/toggle_button"
                    android:textOff="@string/start_scan"
                    android:textOn="@string/stop_scan" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/relLayout12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/textOutput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingTop="4dp"
                android:paddingRight="24dp"
                android:paddingBottom="16dp"
                android:text="@string/instructions" />

        </TableLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
